fix: Vercel API 타임아웃 설정 수정 (wildcard 패턴)

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
   "functions": {
-    "app/api/generate/route.ts": {
-      "maxDuration": 120
-    },
-    "app/api/upscale/route.ts": {
+    "app/api/**/*.ts": {
       "maxDuration": 120
     }
   }
