--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@google/genai": "^1.30.0",
+    "@paddle/paddle-node-sdk": "^3.5.0",
     "@portone/browser-sdk": "^0.1.1",
     "@prisma/client": "5.22.0",
     "@supabase/supabase-js": "^2.85.0",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.554.0",
     "next": "^16.0.8",
     "next-auth": "^4.24.13",
+    "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
